tests/snapshots/snapshot_tests__simple_observe__01_first_coord.snap
---
source: tests/snapshot_tests.rs
expression: snapshot_of(&graph)
---
total_sum: 10

G-tree:
[d0] 0..65536  own=10  sum=10  I
├── [d1] 0..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=0  sum=0  T

V-tree (active nodes):
[d0] 0..65536  own=10  sum=10  I
├── [d1] 0..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=0  sum=0  T
