tests/snapshots/snapshot_tests__simple_observe__03_revisit_first_coord.snap
---
source: tests/snapshot_tests.rs
expression: snapshot_of(&graph)
---
total_sum: 18

G-tree:
[d0] 0..65536  own=10  sum=18  I
├── [d1] 0..32768  own=8  sum=8  I
│   ├── [d2] 0..16384  own=0  sum=0  T
│   └── [d2] 16384..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=0  sum=0  T

V-tree (active nodes):
[d0] 0..65536  own=10  sum=18  I
├── [d1] 0..32768  own=8  sum=8  I
│   ├── [d2] 0..16384  own=0  sum=0  T
│   └── [d2] 16384..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=0  sum=0  T
